--- a/findesk-ui-service.yaml
+++ b/findesk-ui-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: finpro-ui-service
+    name: findesk-ui-service
 spec:
     selector:
         app: findesk-ui
