--- a/findesk-ui-ingress.yaml
+++ b/findesk-ui-ingress.yaml
@@ -1,28 +1,22 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  annotations:
-    nginx.ingress.kubernetes.io/add-base-url: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.org/client-max-body-size: 50M
-  
-  labels:
-    k8slens-edit-resource-version: v1
   name: findesk-ingress
   namespace: findesk-staging
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
-  ingressClassName: nginx
+  tls:
+  - hosts:
+    - droseblb.com.np
+    secretName: findesk-citytech-cert
   rules:
-  - host: findesk-stagging.droseblb.com.np
+  - host: findesk-staging.droseblb.com.np
     http:
       paths:
-      - frontend:
-        path: /
-        pathType: Prefix
+      - path: /(|$)(.*)
         backend:
-          service:
-            name: finpro-blb-service
-            port:
-              number: 80
-
+          serviceName: findesk-ui-service
+          servicePort: 80
