--- a/findesk-ui-service.yaml
+++ b/findesk-ui-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
     name: findesk-ui-service
+    namespace: findesk-staging
 spec:
     selector:
         app: findesk-ui
