--- a/BLB-GIBL/findesk-ui-service.yaml
+++ b/BLB-GIBL/findesk-ui-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: finpro-blb-portal-service
+    name: findesk-ui-service
 spec:
     selector:
-        app: finpro-blb-portal
+        app: findesk-ui
     ports:
         - name: http
           protocol: TCP
