--- a/BLB-NIMB/UAT-TEST/WEB-BE/finpro-blb-pv.yaml
+++ b/BLB-NIMB/UAT-TEST/WEB-BE/finpro-blb-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-    name: finpro-blb-pvc
+    name: finpro-blb-pv
 spec:
   accessModes:
   - ReadWriteMany
@@ -9,10 +9,7 @@ spec:
     storage: 5Gi
   volumeMode: Filesystem
   persistentVolumeReclaimPolicy: Delete
-  storageClassName: managed-nfs
-  mountOptions:
-    - hard
-    - nfsvers=4.1
-  nfs:
-    path: /finpos-nfs/blb
-    server: 10.20.30.99
+  storageClassName: microk8s-hostpath
+  hostPath:
+    path: /opt/blb
+
