--- a/BLB-NIMB/UAT-TEST/WEB-BE/finpro-blb-pvc.yaml
+++ b/BLB-NIMB/UAT-TEST/WEB-BE/finpro-blb-pvc.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: finpro-blb-pvc
-  namespace: blb-test
-
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 5Gi
-  storageClassName: managed-nfs
+  storageClassName: microk8s-hostpath
   volumeMode: Filesystem
