--- a/BLB-Live/WEB-FE/finpro-blb-portal-service.yaml
+++ b/BLB-Live/WEB-FE/finpro-blb-portal-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: findesk-ui-service
+    name: finpro-blb-portal-service
 spec:
     selector:
-        app: findesk-ui
+        app: finpro-blb-portal
     ports:
         - name: http
           protocol: TCP
