--- a/BLB-Live/WEB-FE/finpro-blb-portal.yaml
+++ b/BLB-Live/WEB-FE/finpro-blb-portal.yaml
@@ -1,22 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: findesk-ui
+    name: finpro-blb-portal
+    namespace: blb-test
     labels:
-        app: findesk-ui
+        app: finpro-blb-portal
 spec:
     replicas: 1
     selector:
         matchLabels:
-            app: findesk-ui
+            app: finpro-blb-portal
     template:
         metadata:
             labels:
-                app: findesk-ui
+                app: finpro-blb-portal
         spec:
             containers:
-                - name: findesk-ui-pod
-                  image: reg.citytech.global/finpro/findesk-ui:${BUILD_NUMBER}
+                - name: finpro-blb-portal-pod
+                  image: reg.citytech.global/finpulse/blb-portal-uat:UAT.4
                   imagePullPolicy: Always
                   ports:
                       - containerPort: 80
