--- a/BLB-Test/WEB-FE/finpro-blb-portal-service.yaml
+++ b/BLB-Test/WEB-FE/finpro-blb-portal-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
     name: finpro-blb-portal-service
+    namespace: blb-uat
 spec:
     selector:
         app: finpro-blb-portal
